--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "node index.js"
+    "dev": "node index.js",
+    "build": "echo 'No build needed'"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -15,5 +16,13 @@
   },
   "engines": {
     "node": ">=18"
-  }
+  },
+  "keywords": [
+    "bitrix24",
+    "mysql",
+    "api",
+    "rest"
+  ],
+  "author": "mi4gang",
+  "license": "MIT"
 }
