--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,5 @@
 PORT=3000
-DB_HOST=your-mysql-host.timeweb.ru
+DB_HOST=5.129.206.213
 DB_PORT=3306
-DB_USER=your_db_user
-DB_PASSWORD=your_db_password
-DB_NAME=your_db_name
+DB_USER=gen_user
+DB_PASSWORD=t6nfb4TEUhf}r{
